--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 * {
   margin: 0;
   box-sizing: border-box;
@@ -46,8 +8,13 @@ body {
   margin: 0;
   padding: 0;
   background: rgb(25,25,25);
-  background: linear-gradient(146deg, rgba(25,25,25,1) 0%, rgba(60,60,60,1) 100%);
+  background: linear-gradient(146deg, rgb(0, 0, 0) 0%, rgb(43, 42, 42) 100%);
   color: #fff;  
+}
+
+.container{
+  box-sizing: border-box;
+  padding:  5rem 5rem 5rem 15rem;
 }
 
 .nav {
@@ -87,3 +54,4 @@ body {
   text-align: center;
   width: 100%;
 }
+
